tests/miniJava/neg/005385_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { int [] extends java ; }
